[Swagger] add offers get by farmId
